# coffee-shop-api

./: .env.dist  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/common/: enums.py
app/config/: dao.py  database.py  settings.py
app/custom_jwt/: models.py  services.py
app/migrations/: env.py
app/migrations/versions/: 71e43d01a663_initial_migration.py
app/models/: user.py
app/routers/: auth.py  users.py
app/schemas/: auth.py  user.py
app/services/: auth.py  user.py  user_dao.py
app/tasks/: celery.py  check_user_task.py  send_mail_tasks.py
